Step 7 Code/release/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-istio-clusterip
spec:
  host: frontend
  subsets:
  - name: standard
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-istio-loadbalancer
spec:
  host: frontend-external
  subsets:
  - name: standard
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-istio-clusterip
spec:
  hosts:
    - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: standard
      weight: 75
    - destination:
        host: frontend
        subset: canary
      weight: 25
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-istio-loadbalancer
spec:
  hosts:
    - frontend-external
  http:
  - route:
    - destination:
        host: frontend-external
        subset: standard
      weight: 75
    - destination:
        host: frontend-external
        subset: canary
      weight: 25
